	* Test if Theme.class is really there, keep the default of local.inc if
	not in  User.class
	* Remove test about the presence of /etc/gforge/custom/pre.php in
	pre.php. Customized pre.php can be loaded by adding a path in apache
	* Manage a sys_custom_path for gforge customization
	* Added group param to tab hoook
	* Added site_admin_option_hook to add new features in admin page

2004-04-15  Christian Bayle <bayle@debian.org>

	* Reordered country code by country name and not by country code 
	(closes bug #762)
	* Replace squal_pre.php with pre.php in ./www/frs/download.php
	./www/snippet/download.php ./www/tracker/download.php
	* utils/fill-in-the-blanks.pl can use more than one conf file

2004-04-14  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed a bug in new cronjob cvs.php. Modes must be in octal.

2004-04-13  Tom Copeland <tom@infoether.com>
	
	* www/admin/userlist.php: Added sorting by user_name and add_date.

2004-04-13  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed a bug in /mail/
	* moved inclusion of escapingUtils.php in pre.php
	* removed an unused variable in history_parse.php
	* new access control for cvs repositories
	* removed chgrp -R repository from loginfo by using setgid bit
	* improved security of cvsweb.php. It's now usable in production environment.
	* fixed a bug in cvsweb.cgi

2004-04-08  Tom Copeland <tom@infoether.com>

	* www/forum/include/ForumHTML.class: SQL optimization - replaced a 'select *'
	with explicit field selection.  This really didn't save that much, since only
	only field was unused, but every little bit helps.
	* common/include/User.class: SQL Optimization - replace a 'select *' with
	a 'select count(*)'.  This query ranked # 22 (executed 364 times) on an 
	overnight SQL analysis run, so this optimization should help a fair bit.

2004-04-08  Christian Bayle <bayle@debian.org>

	* Better management of symlink in apache config (install-apache.sh and
	setup)